tests/type-errors/expr_control_match_list_bad_type.arl
archetype expr_control_match_list_bad_type

variable res : nat = 0

entry exec() {
  var l : nat = 1;
  res :=
  match l with
  | hd::t -> hd
  | []    -> 0
  end
}
